--- a/instagramy/static/css/style.css
+++ b/instagramy/static/css/style.css
@@ -24,7 +24,7 @@
         font-family:'Billabong';
         font-size:55px;
         text-align:center;
-    } */
+    }
     .phone{
         background-image:url('https://instagram.com/static/images/homepage/home-phones.png/43cc71bb1b43.png');
         background-repeat:no-repeat;
@@ -107,4 +107,4 @@
         background-color: green;
     }
 
- 
+
