--- a/instagramy/templates/profile.html
+++ b/instagramy/templates/profile.html
@@ -33,7 +33,7 @@ ul li {
 }
 </style>
 <script>
-    alert('{{ message }}');
+    // alert('{{ message }}');
 </script>
 <div class='container-fluid'>
 	<div class='row' style='margin-top:100px;'>
@@ -62,6 +62,7 @@ ul li {
 	{%for image in images%}
 	<div class='col-md-4 col-xs-4 col-sm-4 card'>
 	<img src='{{image.image.url}}' class='img-responsive' style='width:100%;'>
+	<p>{{image.image.url}</p>
 </div>
 {%endfor%}
     </div>
