--- a/instagramy/templates/profile.html
+++ b/instagramy/templates/profile.html
@@ -62,7 +62,7 @@ ul li {
 	{%for image in images%}
 	<div class='col-md-4 col-xs-4 col-sm-4 card'>
 	<img src='{{image.image.url}}' class='img-responsive' style='width:100%;'>
-	<p>{{image.image.url}</p>
+	<!-- <p>{{image.image.url}</p> -->
 </div>
 {%endfor%}
     </div>
