--- a/instagramy/templates/registration/login.html
+++ b/instagramy/templates/registration/login.html
@@ -16,7 +16,7 @@
             	{%csrf_token%}
             	{% for field in form %}
             	<div class='fieldWrapper'>
-            		<h5 style='text-align:center;font-family"Roboto", sans-serif;font-size:14px;'>{{field.label}}</h5>
+            		<h5 style='text-align:center;font-family:"Roboto", sans-serif;font-size:14px;'>{{field.label}}</h5>
 
             		<p style='width:100%;text-align:center;'>{{field}}</p>
             		</div>
